mp2/mp2/2023-04-08_10-20-20_mp2-judge/b09901027/make_stderr.txt
fatal: not a git repository (or any parent up to mount point /)
Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).
In file included from kernel/vm.c:5:
kernel/vm.c: In function 'vmprint_lvl':
kernel/riscv.h:341:15: error: called object is not a function or function pointer
  341 | #define PTE_V (1L << 0) // valid
      |               ^
kernel/vm.c:453:10: note: in expansion of macro 'PTE_V'
  453 |       if(PTE_V(pte)) printf(" V");
      |          ^~~~~
kernel/riscv.h:342:15: error: called object is not a function or function pointer
  342 | #define PTE_R (1L << 1)
      |               ^
kernel/vm.c:454:10: note: in expansion of macro 'PTE_R'
  454 |       if(PTE_R(pte)) printf(" R");
      |          ^~~~~
kernel/riscv.h:343:15: error: called object is not a function or function pointer
  343 | #define PTE_W (1L << 2)
      |               ^
kernel/vm.c:455:10: note: in expansion of macro 'PTE_W'
  455 |       if(PTE_W(pte)) printf(" W");
      |          ^~~~~
kernel/riscv.h:344:15: error: called object is not a function or function pointer
  344 | #define PTE_X (1L << 3)
      |               ^
kernel/vm.c:456:10: note: in expansion of macro 'PTE_X'
  456 |       if(PTE_X(pte)) printf(" X");
      |          ^~~~~
kernel/riscv.h:345:15: error: called object is not a function or function pointer
  345 | #define PTE_U (1L << 4) // 1 -> user can access
      |               ^
kernel/vm.c:457:10: note: in expansion of macro 'PTE_U'
  457 |       if(PTE_U(pte)) printf(" U");
      |          ^~~~~
kernel/riscv.h:346:15: error: called object is not a function or function pointer
  346 | #define PTE_S (1L << 9)   // swapped
      |               ^
kernel/vm.c:458:10: note: in expansion of macro 'PTE_S'
  458 |       if(PTE_S(pte)) printf(" S");
      |          ^~~~~
make: *** [Makefile:135: kernel/vm.o] Error 1
